; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_begin.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.json_writer*, i8, i32)* @begin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @begin(%struct.json_writer* %0, i8 signext %1, i32 %2) #0 {
  %4 = alloca %struct.json_writer*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store %struct.json_writer* %0, %struct.json_writer** %4, align 8
  store i8 %1, i8* %5, align 1
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.json_writer*, %struct.json_writer** %4, align 8
  %9 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 8
  %10 = load %struct.json_writer*, %struct.json_writer** %4, align 8
  %11 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %10, i32 0, i32 3
  %12 = load i8, i8* %5, align 1
  %13 = call i32 @strbuf_addch(i32* %11, i8 signext %12)
  %14 = load %struct.json_writer*, %struct.json_writer** %4, align 8
  %15 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %14, i32 0, i32 2
  %16 = load i8, i8* %5, align 1
  %17 = call i32 @strbuf_addch(i32* %15, i8 signext %16)
  %18 = load %struct.json_writer*, %struct.json_writer** %4, align 8
  %19 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  ret void
}

declare dso_local i32 @strbuf_addch(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
